# pylon-web

./: Cargo.toml  Dockerfile  Dockerfile_Tests  README.md
.devcontainer/: Dockerfile  devcontainer.json
backend/: Cargo.toml
backend/src/: consts.rs  fairings.rs  lib.rs  main.rs
backend/src/controllers/: mod.rs
backend/src/core/: mod.rs
backend/src/routes/: mod.rs
backend/tests/: mod.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: Button.css  Button.js  Dashboard.css  Dashboard.js  Loader.css  Loader.js  MessageContainer.js  ReceiverForm.css  ReceiverForm.js  SenderForm.css  SenderForm.js  messageContainer.js
