[package]
name = "pylon-web"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

[dependencies]
magic-wormhole = "0.4.0"
lazy_static = "1.4.0"
futures = "0.3.21"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.serde]
version = "1.0.137"
features = ["derive"]
